--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,13 @@
 body {
   margin: 0;
   padding: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 1000px;
+  height: 600px;
 }
 
 model-viewer {
-  width: 800px;
-  height: 600px;
+  width: 100%;
+  height: 90%;
   background-color: #e38e52;
 }
 
