--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,9 @@
 }
 
 body {
-  margin: auto;
-  margin-top: 100px;  
+  /*margin: auto;
+  margin-top: 100px;*/
+  margin: 0px;
   padding: 0px;
   width: 1000px;
   height: 600px;
